Agregamos la imagen a la pagina web

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 	<div class="open">
 		<div class="layer"></div>
 		<div class="layer"></div>
+		<section>
+			<div class="bannerText">
+				<h2>Amazing Creations</h2><br>
+				<h3>Innovation and Design</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+				<a href="#">Read More</a>		
+			</div>
+			<img src="bulb2.jpg" class="bulb" alt="">
+		</section>
 	</div>
 </body>
 </html>
